2012-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Copyright notice updates.

	* Makefile.in: Add 2012 as year of republication.
	* src/pkgbase.h src/sysroot.cpp src/pkgexec.cpp: Likewise.
	* src/rites.c src/pkginst.cpp src/pkgunst.cpp: Likewise.

2012-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix ill-advised optimisation in $APPROOT environment lookup.

	* src/rites.c (approot_path): Don't save result of getenv() lookup
	across calls; the environment may have been moved in the interim,
	making the original result invalid on any subsequent call.  Also,
	prefer MS-Windows style (with backslashes) for default.
	(pkgLastRites): Report full path name for lastrites.exe, on execl()
	failure, rather than only the path relative to $APPROOT.

2012-02-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Propagate sysroot path settings to scripts via the environment.

	* src/pkgbase.h (PKG_PUTENV_FLAGS_MASK): New constant; it maps...
	(PKG_PUTENV_DIRSEP_MSW, PKG_PUTENV_DIRSEP_POSIX): ...these flags...
	(PKG_PUTENV_SCAN_VARNAME, PKG_PUTENV_NAME_TOUPPER): ...and these;
	they are used to specify optional behavioural choices for...
	(pkgPutEnv): ...this new function; declare it.

	* src/sysroot.cpp (pkgPutEnv): Implement it.
	(pkgXmlDocument::LoadSystemMap): Use it to add $SUBSYSTEM_SYSROOT path
	specifications to the environment, for each named subsystem associated
	with the active system map.

	* src/pkgexec.cpp (pkgActionItem::Execute): Invoke pkgPutEnv() prior
	to processing of each package install, upgrade, or remove action, so
	as to update environment variable $SYSROOT to represent the sysroot
	path for each package processed, during execution of script hooks.

2012-02-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement hooks to support lua scripting interface.

	* Makefile.in (LIBS): Add -llua.

	* src/pkgbase.h (pkgXmlNode::InvokeScript): New method; declare it